# OpenCV_Kinect2SDK

./: CMakeLists.txt  License.txt  Readme.txt
include/: Microsoft_grabber2.h  OpenCV_KinectSDK.h
src/: CMakeLists.txt  Microsoft_grabber2.cpp  OpenCV_Kinect2SDK.cpp
